# Environmental-Insights-Interactive

./: .gitignore  .gitmodules  CITATION.cff  CNAME  README.md  app.py  asset-manifest.json  index.html  package-lock.json
backend/: app.py  build_database.py  build_database_complete.py  environment.yml  generate_pdf.py  package.json  pyproject.toml  style.css
backend/data/: data.json
backend/data/raw_data/: Month_1-Day_Friday-Hour_9_Air_Pollution_Concentrations.csv  uk_1km_landGrids_3395_london.gpkg
backend/js/: script.js
backend/src/: index.js
backend/templates/: index.html
frontend/eii_react/: README.md  craco.config.js  package-lock.json  package.json
frontend/eii_react/src/: App.css  App.js
src/: style.css
static/css/: main.3a0d77c7.css  main.6754aa70.css
static/js/: 607.2d135d0b.chunk.js  main.03a70c6c.js  main.381f17ae.js  main.7a64c168.js  main.7a64c168.js.LICENSE.txt  main.c1cd8818.js
